# patient-encounter-system

./: .coverage  README.md  alembic.ini  check_db.py  pyproject.toml  requirements.txt  reset_db.py  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 119c765ef9ac_create_patients_appointments_doctors_.py
src/: database.py  main.py
src/api/: appointments.py  doctors.py  patients.py
src/models/: appointment.py  doctor.py  patient.py
src/schemas/: appointment.py  doctor.py  patient.py
src/services/: appointment_service.py  doctor_service.py  patient_service.py
tests/: test_services.py
