[project]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Saniyasana555",email = "saniyasana687@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "patient_encounter_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)"
]
