[project]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Saniyasana555",email = "saniyasana687@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "patient_encounter_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
