[project]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Saniyasana555",email = "saniyasana687@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "patient_encounter_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
